# HelloNDKDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/solarexsoft/ndkdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: HelloNDK.cpp
app/src/main/java/com/solarexsoft/ndkdemo/: HelloNDK.java  MainActivity.java
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/solarexsoft/ndkdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
